--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>LUSH</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/main.css">
 
     <script src="./js/jquery-1.12.4.min.js"></script>
@@ -41,13 +42,41 @@
 
         <main>
             <section class="main_visual">
-                <div class="slogan_wrap">
-                    <h2>B2B</h2>
-                    <p class="tit">
-                        <span>프레쉬 핸드메이드</span>
-                        <strong>코스메틱 브랜드</strong>
-                    </p>
-                    <p class="des">제품에 담긴 신선한 에디컬 스토리가 모두에게 잊지 못할 순간을 선사할 거예요.</p>
+                <div class="main_slide">
+                    <div class="bg v_box01">
+                        <div class="slogan_wrap">
+                            <h2>러쉬</h2>
+                            <p class="tit">
+                                <span> 지금 러쉬는</span>
+                                <strong>더 신선하게 준비중!</strong>
+                            </p>
+                            <p class="des">곧, 러쉬 공식 앱 스토어로 찾아올게요.</p>
+                        </div>
+                    </div>
+                    <div class="bg v_box02">
+                        <div class="slogan_wrap">
+                            <h2>러쉬 소개</h2>
+                            <p class="tit">
+                                <span>프레쉬 핸드메이드</span>
+                                <strong>코스메틱 브랜드</strong>
+                            </p>
+                            <p class="des">우리의 글로벌 기부 생태계는 적절하고 급진적이며 광범위 합니다.</p>
+                        </div>
+                    </div>
+                    <div class="bg v_box03">
+                        <div class="slogan_wrap">
+                            <h2>B2B</h2>
+                            <p class="tit">
+                                <span>소중한 직원과 고객을 위한</span>
+                                <strong>가치 있는 선물</strong>
+                            </p>
+                            <p class="des">제품에 담긴 신선한 에디컬 스토리가 모두에게 잊지 못할 순간을 선사할 거예요.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="arrows">
+                    <i class="xi-angle-left prev"></i>
+                    <i class="xi-angle-right next"></i>
                 </div>
             </section>
 
